--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- link of csss file -->
-    <link rel="stylesheet" href="../2-css/all.min.css" />
+    <link rel="stylesheet" href="all.min.css" />
     <!-- link of icon image -->
     <link rel="icon " href="../resto.png" type="image/x-icon" />
     <!-- link of font -->
@@ -12,8 +12,14 @@
       href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400&display=swap"
       rel="stylesheet"
     />
+    <!-- link of font awesome -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+    />
+
     <!-- link of css file -->
-    <link rel="stylesheet" href="../2-css/style.css" />
+    <link rel="stylesheet" href="index.css" />
     <!-- link of bootstrap -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
@@ -44,6 +50,7 @@
             alt=""
           />
         </div>
+
         <ul
           class="navbar-nav me-auto mb-2 mb-lg-0 d-flex flex-row justify-content-around flex-grow-1"
         >
@@ -318,7 +325,7 @@
                 rows="5"
                 required
               ></textarea>
-              <div class="text-center">
+              <div class="text-center m-3">
                 <button type="submit" class="btn btn-outline-danger">
                   Send Message
                 </button>
@@ -329,18 +336,34 @@
       </section>
 
       <!-- Footer -->
+
       <footer class="bg-dark text-light text-center py-3">
         <p>&copy; 2024 Tropico Restaurant. All Rights Reserved.</p>
-        <div>
-          <a href="http.facebook.com"
-            >facebook<i class="fab fa-facebook"></i
-          ></a>
-          <a href="http.instagram.com" class="text-light me-3"
-            ><i class="fab fa-instagram">instagram</i></a
-          >
-          <a href="http.twitter.com" class="text-light"
-            ><i class="fab fa-twitter">twitter</i></a
-          >
+        <div class="container">
+          <div class="row">
+            <div
+              class="col-12 col-md-6 offset-md-3 d-flex justify-content-center flex-wrap gap-4 text-light fs-5"
+            >
+              <a
+                href="https://facebook.com"
+                class="d-flex align-items-center text-light"
+              >
+                <i class="fab fa-facebook me-2"></i>Facebook
+              </a>
+              <a
+                href="https://instagram.com"
+                class="d-flex align-items-center text-light"
+              >
+                <i class="fab fa-instagram me-2"></i>Instagram
+              </a>
+              <a
+                href="https://twitter.com"
+                class="d-flex align-items-center text-light"
+              >
+                <i class="fab fa-twitter me-2"></i>Twitter
+              </a>
+            </div>
+          </div>
         </div>
       </footer>
     </div>
